--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- headline container -->
         <div class="top-container">
           <a href="index.html">Weight</a>
-          <a href="units.html">Cups/dl</a>
+          <a href="/liquids/cooking.html">Cups/dl</a>
           <a href="index.html">Currancy</a>
         </div>
         <!-- Button & Input wrapper -->
@@ -40,10 +40,10 @@
           <!-- input container -->
           <div class="input-container">
             <input
-              type="text"
+              type="number"
               name="weight"
               id="weight-input"
-              placeholder="Type weight..."
+              placeholder="Type weight in LBS..."
             />
           </div>
         </div>
