lang update to en

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="result-container">
           <table id="KG-table" class="">
             <tr>
-              <th class="headline">Enhet</th>
-              <th class="headline">Värde</th>
+              <th class="headline">Unit</th>
+              <th class="headline">Value</th>
             </tr>
             <tr>
               <th>Kilogram</th>
@@ -70,8 +70,8 @@
 
           <table id="LBS-table" class="hidden">
             <tr>
-              <th class="headline">Enhet</th>
-              <th class="headline">Värde</th>
+              <th class="headline">Unit</th>
+              <th class="headline">Value</th>
             </tr>
             <tr>
               <th>Stones</th>
