file path updated

--- a/liquids/cooking.html
+++ b/liquids/cooking.html
@@ -24,8 +24,8 @@
       <div class="container">
         <!-- headline container -->
         <div class="top-container">
-          <a href="/index.html">Weight</a>
-          <a href="units.html">Cups/dl</a>
+          <a href="./index.html">Weight</a>
+          <a href="#">Cups/dl</a>
         </div>
         <!-- Button & Input wrapper -->
         <div class="middle-container">
