--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <div class="container">
         <!-- headline container -->
         <div class="top-container">
-          <a href="index.html">Weight</a>
-          <a href="/liquids/cooking.html">Cups/dl</a>
+          <a href="#">Weight</a>
+          <a href="./liquids/cooking.html">Cups/dl</a>
         </div>
         <!-- Button & Input wrapper -->
         <div class="middle-container">
