--- a/liquids/cooking.html
+++ b/liquids/cooking.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Converter</title>
-    <link rel="stylesheet" href="/liquids/cooking.css" />
+    <link rel="stylesheet" href="cooking.css" />
     <script
       src="https://kit.fontawesome.com/da493979b6.js"
       crossorigin="anonymous"
@@ -24,7 +24,7 @@
       <div class="container">
         <!-- headline container -->
         <div class="top-container">
-          <a href="../index.html">Weight</a>
+          <a href="./index.html">Weight</a>
           <a href="#">Cups/dl</a>
         </div>
         <!-- Button & Input wrapper -->
