--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- headline container -->
         <div class="top-container">
           <a href="#">Weight</a>
-          <a href="./liquids/cooking.html">Cups/dl</a>
+          <a href="./cooking/cooking.html">Cups/dl</a>
         </div>
         <!-- Button & Input wrapper -->
         <div class="middle-container">
