--- a/cooking/cooking.html
+++ b/cooking/cooking.html
@@ -24,7 +24,7 @@
       <div class="container">
         <!-- headline container -->
         <div class="top-container">
-          <a href="./index.html">Weight</a>
+          <a href="../index.html">Weight</a>
           <a href="#">Cups/dl</a>
         </div>
         <!-- Button & Input wrapper -->
