--- a/cooking/cooking.html
+++ b/cooking/cooking.html
@@ -70,11 +70,11 @@
               <td id="ml-result"></td>
             </tr>
             <tr>
-              <th>matsked</th>
+              <th>tablespoon</th>
               <td id="msk-result"></td>
             </tr>
             <tr>
-              <th>tesked</th>
+              <th>teaspoon</th>
               <td id="tsk-result"></td>
             </tr>
           </table>
@@ -101,7 +101,7 @@
               <td id="cup-result"></td>
             </tr>
             <tr>
-              <th>ounce</th>
+              <th>oz</th>
               <td id="ounce-result"></td>
             </tr>
           </table>
